# cgal-testsuite-dockerfiles

./: .gitignore  .travis.yml  LAStools.patch  Makefile  README.md  build_images.py  cgal_docker.py  cgal_docker_args.py  cgal_release.py  docker-entrypoint.sh  install_lastools.sh  list_test_runner_machines  push.sh  resubmit-results.py  run-testsuite.sh  secret.txt.enc  test.sh  test_cgal.py
.github/workflows/: tests.yml
ArchLinux/: 0006-FindBoost-update-to-1.62.patch  0008-FindBoost-Add-1.62-and-1.62.0-as-supported-versions.patch  Dockerfile  init.cmake  pacman.sed  update-FindBoost.cmake.sh
ArchLinux-CXX14/: Dockerfile
ArchLinux-CXX17-Release/: Dockerfile  init.cmake
ArchLinux-clang/: Dockerfile  init.cmake
ArchLinux-clang-CXX14/: Dockerfile  init.cmake
ArchLinux-clang-CXX17-Release/: Dockerfile  init.cmake
ArchLinux-clang-CXX1z/: Dockerfile
ArchLinux-clang-CXX20-Release/: Dockerfile  init.cmake
ArchLinux-clang-Release/: Dockerfile  init.cmake
ArchLinux-clang-svn/: Dockerfile
CentOS-5/: Dockerfile
CentOS-6/: Dockerfile
CentOS-6-32/: Dockerfile
CentOS-6-CXX11-Boost157/: Dockerfile
CentOS-7/: Dockerfile  init.cmake
CentOS-7-Debug/: Dockerfile
CentOS-7-ICC/: Dockerfile  config.cfg  intel.sh
CentOS-7-ICC-2016/: Dockerfile
CentOS-7-ICC-2016-Release/: Dockerfile
CentOS-7-ICC-Release/: Dockerfile
CentOS-7-ICC-beta/: Dockerfile  config.cfg
CentOS-7-Release/: Dockerfile
Debian-for-arm/: Dockerfile
Debian-stable/: Dockerfile
Debian-stable-Release/: Dockerfile
Debian-stable-cross-compilation-for-arm/: Dockerfile  startup.sh
Debian-testing/: Dockerfile
Debian-testing-clang-main/: Dockerfile
Fedora/: Dockerfile  init.cmake
Fedora-32/: Dockerfile  init.cmake
Fedora-32-Release/: Dockerfile  init.cmake
Fedora-Release/: Dockerfile  init.cmake
Fedora-clang-svn/: Dockerfile
Fedora-rawhide/: Dockerfile
Fedora-rawhide-Release/: Dockerfile  init.cmake
Fedora-rawhide-fsanitize/: Dockerfile  init.cmake
Fedora-strict-ansi/: Dockerfile
Fedora-with-LEDA/: Dockerfile  init.cmake
Ubuntu/: Dockerfile
Ubuntu-64/: Dockerfile
Ubuntu-CXX11/: Dockerfile  init.cmake
Ubuntu-GCC6/: Dockerfile  init.cmake
Ubuntu-GCC6-CXX1Z/: Dockerfile  init.cmake
Ubuntu-GCC6-Release/: Dockerfile  init.cmake
Ubuntu-GCC_master_cpp20-Release/: Dockerfile  init.cmake
Ubuntu-NO_DEPRECATED_CODE/: Dockerfile  init.cmake
Ubuntu-clang-latest/: Dockerfile
Ubuntu-no-gmp-no-leda/: Dockerfile  init.cmake
centos6-32-CGAL/: Dockerfile
centos6-CGAL/: Dockerfile
test_container/: CMakeLists.txt  run-test.sh  test_container.py
