cmake_minimum_required(VERSION 2.8.10)
project(TestCGAL C CXX) # To Enable Compiler Checks

# We output results at the end, because some Find scripts do not
# respect QUIET and clutter the output.

# Set Up the Modules dir
set(CGAL_MODULES_DIR $ENV{CGAL_MODULES_DIR})

set(CMAKE_MODULE_PATH "${CGAL_MODULES_DIR}" ${CMAKE_MODULE_PATH})

find_package(BLAS QUIET)
find_package(Boost 1.39.0 OPTIONAL_COMPONENTS thread system program_options QUIET)
find_package(ESBTL QUIET)
find_package(Eigen3 3.1.0 QUIET)
find_package(GLEW QUIET)
find_package(GMP QUIET)
find_package(IPE QUIET)
find_package(LAPACK QUIET)
find_package(LEDA QUIET)
find_package(MPFI QUIET)
find_package(OpenGL QUIET)
# find_package(OpenMesh QUIET)
# message("OpenMesh_FOUND = ${OpenMesh_FOUND}")
# Do not check this.
find_package(Qt5Core QUIET)
find_package(Qt5Help QUIET)
find_package(Qt5Script QUIET)
find_package(Qt5Svg QUIET)
# RS does the horrible get_dependency_version(GMP) which requires further set-up. Ignoring.
# find_package(RS QUIET)
find_package(TBB QUIET)
find_package(VTK QUIET)
find_package(ZLIB QUIET)

function(canonic_true_false var)
  if(${${var}})
    set(${var} TRUE PARENT_SCOPE)
  else()
    set(${var} FALSE PARENT_SCOPE)
  endif()
endfunction()

message("CMAKE_VERION                = ${CMAKE_VERSION}")
message("CGAL_MODULES_DIR            = ${CGAL_MODULES_DIR}")
canonic_true_false(BLAS_FOUND)
message("BLAS_FOUND                  = ${BLAS_FOUND}")
canonic_true_false(Boost_FOUND)
message("Boost_FOUND                 = ${Boost_FOUND}")
canonic_true_false(Boost_THREAD_FOUND)
message("Boost_THREAD_FOUND          = ${Boost_THREAD_FOUND}")
canonic_true_false(Boost_SYSTEM_FOUND)
message("Boost_SYSTEM_FOUND          = ${Boost_SYSTEM_FOUND}")
canonic_true_false(Boost_PROGRAM_OPTIONS_FOUND)
message("Boost_PROGRAM_OPTIONS_FOUND = ${Boost_PROGRAM_OPTIONS_FOUND}")
canonic_true_false(ESBTL_FOUND)
message("ESBTL_FOUND                 = ${ESBTL_FOUND}")
canonic_true_false(EIGEN3_FOUND)
message("EIGEN3_FOUND                = ${EIGEN3_FOUND}")
canonic_true_false(GLEW_FOUND)
message("GLEW_FOUND                  = ${GLEW_FOUND}")
canonic_true_false(GMP_FOUND)
message("GMP_FOUND                   = ${GMP_FOUND}")
canonic_true_false(IPE_FOUND)
message("IPE_FOUND                   = ${IPE_FOUND}")
canonic_true_false(LAPACK_FOUND)
message("LAPACK_FOUND                = ${LAPACK_FOUND}")
canonic_true_false(LEDA_FOUND)
message("LEDA_FOUND                  = ${LEDA_FOUND}")
canonic_true_false(MPFI_FOUND)
message("MPFI_FOUND                  = ${MPFI_FOUND}")
canonic_true_false(OPENGL_FOUND)
message("OPENGL_FOUND                = ${OPENGL_FOUND}")
canonic_true_false(Qt5Core_FOUND)
message("Qt5Core_FOUND               = ${Qt5Core_FOUND}")
canonic_true_false(Qt5Help_FOUND)
message("Qt5Help_FOUND               = ${Qt5Help_FOUND}")
canonic_true_false(Qt5Script_FOUND)
message("Qt5Script_FOUND             = ${Qt5Script_FOUND}")
canonic_true_false(Qt5Svg_FOUND)
message("Qt5Svg_FOUND                = ${Qt5Svg_FOUND}")
# canonic_true_false(RS_FOUND)
# message("RS_FOUND                  = ${RS_FOUND}")
canonic_true_false(TBB_FOUND)
message("TBB_FOUND                   = ${TBB_FOUND}")
canonic_true_false(VTK_FOUND)
message("VTK_FOUND                   = ${VTK_FOUND}")
canonic_true_false(ZLIB_FOUND)
message("ZLIB_FOUND                  = ${ZLIB_FOUND}")